redirect to formshare

--- a/index.html
+++ b/index.html
@@ -552,7 +552,8 @@
             ctaButtons.forEach(button => {
                 if (button.textContent.includes('Começar') || button.textContent.includes('Renovar') || button.textContent.includes('Escolher')) {
                     button.addEventListener('click', function() {
-                        window.open('https://forms.gle/dSvcWisMaMYQ16am8', '_blank');
+                        // window.open('https://forms.gle/dSvcWisMaMYQ16am8', '_blank');
+                        window.open('https://formshare.ai/r/9xrRzauoSk', '_blank');
                     });
                 }
             });
