small fixes in copy

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://receitaonline.com.br/">
+    <meta property="og:url" content="https://drmente.com/">
     <meta property="og:title" content="Renovar Receita Médica Online - Rápido e Seguro">
     <meta property="og:description" content="Renove sua receita médica de ansiedade sem sair de casa. Processo 100% online, seguro e regulamentado.">
-    <meta property="og:image" content="https://receitaonline.com.br/og-image.jpg">
+    <meta property="og:image" content="https://drmente.com/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://receitaonline.com.br/">
+    <meta property="twitter:url" content="https://drmente.com/">
     <meta property="twitter:title" content="Renovar Receita Médica Online - Rápido e Seguro">
     <meta property="twitter:description" content="Renove sua receita médica de ansiedade sem sair de casa. Processo 100% online, seguro e regulamentado.">
-    <meta property="twitter:image" content="https://receitaonline.com.br/og-image.jpg">
+    <meta property="twitter:image" content="https://drmente.com/og-image.jpg">
 
-    <link rel="canonical" href="https://receitaonline.com.br/">
+    <link rel="canonical" href="https://drmente.com/">
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Critical CSS for above-the-fold content -->
@@ -466,9 +466,9 @@
                 </div>
                 <div class="p-6">
                     <div class="w-16 h-16 bg-yellow-100 rounded-lg flex items-center justify-center mx-auto mb-4">
-                        <svg class="w-8 h-8 text-yellow-600" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
-                        </svg>
+                      <svg class="w-8 h-8 text-yellow-600" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+                      </svg>
                     </div>
                     <h3 class="font-semibold mb-2">SSL</h3>
                     <p class="text-sm text-gray-600">Criptografia de ponta para proteção total</p>
@@ -504,7 +504,7 @@
                         <svg class="w-8 h-8 text-blue-400" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
                             <path fill-rule="evenodd" d="M10 2C5.58 2 2 5.58 2 10s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3.5 6L10 10.5 6.5 8 10 5.5 13.5 8z" clip-rule="evenodd"/>
                         </svg>
-                        <span class="text-xl font-bold text-white">ReceitaOnline</span>
+                        <span class="text-xl font-bold text-white">DrMente</span>
                     </div>
                     <p class="text-sm">
                         Renovação de receitas médicas de forma segura, rápida e regulamentada.
@@ -513,24 +513,24 @@
                 <div>
                     <h3 class="font-semibold text-white mb-4">Legal</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="/termos" class="hover:text-white transition-colors focus-visible">Termos de Uso</a></li>
-                        <li><a href="/privacidade" class="hover:text-white transition-colors focus-visible">Política de Privacidade</a></li>
-                        <li><a href="/contato" class="hover:text-white transition-colors focus-visible">Contato</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">Termos de Uso</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">Política de Privacidade</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">Contato</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="font-semibold text-white mb-4">Suporte</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="/faq" class="hover:text-white transition-colors focus-visible">FAQ</a></li>
-                        <li><a href="/ajuda" class="hover:text-white transition-colors focus-visible">Central de Ajuda</a></li>
-                        <li><a href="mailto:suporte@receitaonline.com.br" class="hover:text-white transition-colors focus-visible">suporte@receitaonline.com.br</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">FAQ</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">Central de Ajuda</a></li>
+                        <li><a href="mailto:suporte@drmente.com" class="hover:text-white transition-colors focus-visible">suporte@drmente.com</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="font-semibold text-white mb-4">Médico?</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="/medicos" class="hover:text-white transition-colors focus-visible">Trabalhe Conosco</a></li>
-                        <li><a href="/parceiros" class="hover:text-white transition-colors focus-visible">Parceiros</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">Trabalhe Conosco</a></li>
+                        <li><a href="/" class="hover:text-white transition-colors focus-visible">Parceiros</a></li>
                     </ul>
                 </div>
             </div>
@@ -538,7 +538,7 @@
                 <p class="mb-4">
                     <strong>Aviso Médico:</strong> Este serviço é destinado exclusivamente para renovação de receitas médicas já estabelecidas. Não substitui consulta médica completa. Em caso de dúvidas sobre sua condição de saúde, consulte um médico presencialmente.
                 </p>
-                <p>&copy; 2024 ReceitaOnline. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
+                <p>&copy; <script>document.write(new Date().getFullYear())</script> DrMente. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
             </div>
         </div>
     </footer>
