--- a/successo.html
+++ b/successo.html
@@ -6,21 +6,21 @@
   <title>Sucesso! Estamos processando seu pedido</title>
   <meta name="description" content="Sucesso! Recebemos seu pedido. Estamos processando e entraremos em contato em breve." />
   <meta name="keywords" content="renovar receita médica online, confirmação de pedido, telemedicina" />
-  <link rel="canonical" href="https://exemplo.com/sucesso" />
+  <link rel="canonical" href="https://drmente.com/sucesso" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Sucesso! Estamos processando seu pedido" />
   <meta property="og:description" content="Recebemos seu pedido. Acompanhe o protocolo e saiba os próximos passos." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://exemplo.com/sucesso" />
-  <meta property="og:image" content="https://exemplo.com/og-sucesso.jpg" />
+  <meta property="og:url" content="https://drmente.com/sucesso" />
+  <meta property="og:image" content="https://drmente.com/og-sucesso.jpg" />
   <meta property="og:locale" content="pt_BR" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Sucesso! Estamos processando seu pedido" />
   <meta name="twitter:description" content="Recebemos seu pedido. Acompanhe o protocolo e saiba os próximos passos." />
-  <meta name="twitter:image" content="https://exemplo.com/og-sucesso.jpg" />
+  <meta name="twitter:image" content="https://drmente.com/og-sucesso.jpg" />
 
   <!-- TailwindCSS via CDN (sem build) -->
   <script src="https://cdn.tailwindcss.com" defer></script>
@@ -84,7 +84,7 @@
         "name": "Posso falar com alguém agora?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Sim. Use o botão de suporte nesta página ou escreva para suporte@exemplo.com."
+          "text": "Sim. Use o botão de suporte nesta página ou escreva para suporte@drmente.com."
         }
       }
     ]
@@ -101,14 +101,13 @@
     <nav class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between" aria-label="Principal">
       <a href="/" class="flex items-center gap-2" aria-label="Página inicial">
         <svg class="h-8 w-8" viewBox="0 0 24 24" role="img" aria-label="Logotipo: cruz médica" xmlns="http://www.w3.org/2000/svg">
-          <title>ReceitaJá</title>
+          <title>DrMente</title>
           <rect x="3" y="3" width="18" height="18" rx="4" fill="#1d4ed8"></rect>
           <path d="M12 7v10M7 12h10" stroke="white" stroke-width="2" stroke-linecap="round" />
         </svg>
-        <span class="font-semibold tracking-tight">ReceitaJá</span>
+        <span class="font-semibold tracking-tight">DrMente</span>
       </a>
       <div class="flex items-center gap-3">
-        <a href="#docs" class="text-sm hover:underline">Anexar documentos</a>
         <a href="#faq" class="text-sm hover:underline">FAQ</a>
         <a href="#contato" class="text-sm hover:underline">Contato</a>
       </div>
@@ -124,35 +123,14 @@
             Sucesso! Estamos processando seu pedido
           </h1>
           <p class="mt-4 text-lg text-slate-700 max-w-prose">
-            Entraremos em contato em breve por e-mail ou WhatsApp. Você pode acompanhar e enviar documentos.
+            Entraremos em contato em breve por e-mail ou WhatsApp.
           </p>
           <div class="mt-8 flex flex-wrap gap-3">
-            <a href="#docs" class="inline-flex items-center rounded-xl bg-blue-700 px-6 py-3 text-white font-semibold shadow hover:bg-blue-800 focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Anexar documentos agora">
-              Anexar documentos
-            </a>
-            <a href="#status" class="inline-flex items-center rounded-xl border border-slate-300 px-6 py-3 font-semibold hover:bg-white focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Ver status do pedido">
+            <a href="#status" class="inline-flex items-center rounded-xl bg-blue-700 px-6 py-3 text-white font-semibold shadow hover:bg-blue-800 focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Anexar documentos agora">
               Ver status
             </a>
           </div>
           <!-- Selo de confiança junto ao herói -->
-          <div class="mt-6 flex items-center gap-4 text-sm text-slate-600" aria-label="Selos de confiança">
-            <div class="flex items-center gap-2">
-              <svg class="h-5 w-5" viewBox="0 0 24 24" role="img" aria-label="Dados protegidos" xmlns="http://www.w3.org/2000/svg">
-                <title>LGPD</title>
-                <path d="M6 10h12v9a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2v-9z" fill="#0f172a"/>
-                <path d="M8 10V7a4 4 0 1 1 8 0v3" fill="none" stroke="#0f172a" stroke-width="2" stroke-linecap="round"/>
-              </svg>
-              <span>Dados protegidos • LGPD</span>
-            </div>
-            <div class="flex items-center gap-2">
-              <svg class="h-5 w-5" viewBox="0 0 24 24" role="img" aria-label="Conformidade médica" xmlns="http://www.w3.org/2000/svg">
-                <title>Conformidade médica</title>
-                <circle cx="12" cy="12" r="10" fill="#0f172a"/>
-                <path d="M8 12h8M12 8v8" stroke="white" stroke-width="2" stroke-linecap="round"/>
-              </svg>
-              <span>Receita eletrônica quando adequado</span>
-            </div>
-          </div>
         </div>
 
         <!-- Ilustração leve em SVG, ajuda no entendimento e evita imagens pesadas -->
@@ -177,17 +155,17 @@
         <h2 id="status-heading" class="text-2xl font-bold tracking-tight">Resumo do pedido</h2>
         <div class="mt-6 grid md:grid-cols-3 gap-6">
           <div class="p-6 rounded-2xl border border-slate-200 bg-slate-50">
-            <h3 class="font-semibold">Protocolo</h3>
+            <h3 class="font-semibold">Pedido registrado</h3>
             <p id="proto" class="mt-1 text-slate-700 select-all">—</p>
-            <p class="mt-2 text-sm text-slate-600">Guarde este número para consultas futuras.</p>
+            <p class="mt-2 text-sm text-slate-600">Seu pedido de renovação de receita foi registrado com sucesso.</p>
           </div>
           <div class="p-6 rounded-2xl border border-slate-200 bg-slate-50">
-            <h3 class="font-semibold">E-mail informado</h3>
+            <h3 class="font-semibold">Dados validados</h3>
             <p id="email" class="mt-1 text-slate-700 break-words">—</p>
-            <p class="mt-2 text-sm text-slate-600">Verifique sua caixa de entrada e o spam.</p>
+            <p class="mt-2 text-sm text-slate-600">Verificamos suas informações pessoais e já foram validadas.</p>
           </div>
           <div class="p-6 rounded-2xl border border-slate-200 bg-slate-50">
-            <h3 class="font-semibold">Próxima atualização</h3>
+            <h3 class="font-semibold">Próxima atualização:</h3>
             <p class="mt-1 text-slate-700">Enviada por e-mail ou WhatsApp.</p>
             <p class="mt-2 text-sm text-slate-600">Você receberá orientação clara sobre os próximos passos.</p>
           </div>
@@ -234,42 +212,6 @@
             </div>
           </div>
         </div>
-        <div class="mt-8">
-          <a href="#docs" class="inline-flex items-center rounded-lg bg-blue-700 px-5 py-3 text-white font-semibold hover:bg-blue-800 focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Anexar novos arquivos">
-            Anexar mais arquivos
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Upload / Documentos -->
-    <section id="docs" aria-labelledby="docs-heading" class="py-16">
-      <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8">
-        <h2 id="docs-heading" class="text-2xl sm:text-3xl font-bold tracking-tight">Envie documentos opcionais</h2>
-        <p class="mt-2 text-slate-700">Foto do documento, receita anterior e laudo ajudam na revisão.</p>
-        <!-- Placeholder de upload. Integração real dependerá do seu backend. -->
-        <div class="mt-6 p-6 border-2 border-dashed border-slate-300 rounded-2xl bg-slate-50">
-          <div class="flex items-center gap-3">
-            <svg class="h-6 w-6" viewBox="0 0 24 24" role="img" aria-label="Upload" xmlns="http://www.w3.org/2000/svg">
-              <title>Upload</title>
-              <path d="M12 16V4m0 0l-4 4m4-4l4 4" stroke="#0f172a" stroke-width="2" stroke-linecap="round" fill="none"/>
-              <path d="M4 16v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-2" stroke="#0f172a" stroke-width="2" stroke-linecap="round" fill="none"/>
-            </svg>
-            <p class="font-semibold">Arraste e solte ou <span class="underline">escolha arquivos</span></p>
-          </div>
-          <p class="mt-1 text-sm text-slate-600">Formatos: JPG, PNG, PDF. Máx. 10MB cada.</p>
-          <div class="mt-4">
-            <input aria-label="Selecionar arquivos" type="file" multiple class="sr-only" id="fileInput">
-            <button id="chooseBtn" class="rounded-lg border border-slate-300 px-4 py-2 font-semibold hover:bg-white focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Escolher arquivos para enviar">
-              Escolher arquivos
-            </button>
-            <button id="uploadBtn" class="ml-2 rounded-lg bg-blue-700 text-white px-4 py-2 font-semibold hover:bg-blue-800 focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Enviar arquivos selecionados">
-              Enviar
-            </button>
-          </div>
-          <ul id="fileList" class="mt-4 text-sm text-slate-700"></ul>
-          <p id="uploadNote" class="mt-3 text-sm text-slate-600">* Demonstração. Integração real via API segura.</p>
-        </div>
       </div>
     </section>
 
@@ -284,7 +226,7 @@
           </details>
           <details class="group border border-slate-200 rounded-xl p-4 bg-white">
             <summary class="cursor-pointer font-semibold focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300 rounded">Posso corrigir meu e-mail?</summary>
-            <p class="mt-2 text-slate-700">Sim. Escreva para suporte@exemplo.com com seu protocolo.</p>
+            <p class="mt-2 text-slate-700">Sim. Escreva para suporte@drmente.com com seu protocolo.</p>
           </details>
           <details class="group border border-slate-200 rounded-xl p-4 bg-white">
             <summary class="cursor-pointer font-semibold focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300 rounded">Como cancelo o pedido?</summary>
@@ -305,15 +247,15 @@
         <div class="mt-6 grid md:grid-cols-3 gap-6">
           <div class="p-6 rounded-2xl border border-slate-200">
             <h3 class="font-semibold">Suporte</h3>
-            <p class="mt-1 text-slate-700">suporte@exemplo.com</p>
-            <a href="mailto:suporte@exemplo.com" class="mt-3 inline-flex rounded-lg bg-blue-700 px-4 py-2 text-white font-semibold hover:bg-blue-800 focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Escrever para o suporte">
+            <p class="mt-1 text-slate-700">suporte@drmente.com</p>
+            <a href="mailto:suporte@drmente.com" class="mt-3 inline-flex rounded-lg bg-blue-700 px-4 py-2 text-white font-semibold hover:bg-blue-800 focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Escrever para o suporte">
               Enviar e-mail
             </a>
           </div>
           <div class="p-6 rounded-2xl border border-slate-200">
             <h3 class="font-semibold">WhatsApp</h3>
             <p class="mt-1 text-slate-700">Atendimento em horário comercial.</p>
-            <a href="https://wa.me/5500000000000" class="mt-3 inline-flex rounded-lg border border-slate-300 px-4 py-2 font-semibold hover:bg-white focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Abrir WhatsApp">
+            <a class="mt-3 inline-flex rounded-lg border border-slate-300 px-4 py-2 font-semibold hover:bg-white focus:outline-none focus-visible:ring-4 focus-visible:ring-blue-300" aria-label="Abrir WhatsApp">
               Abrir WhatsApp
             </a>
           </div>
@@ -338,26 +280,52 @@
   </main>
 
   <!-- Footer -->
-  <footer class="py-10 border-t border-slate-200" role="contentinfo">
-    <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row md:items-center md:justify-between gap-4">
-      <div class="flex items-center gap-2">
-        <svg class="h-6 w-6" viewBox="0 0 24 24" role="img" aria-label="Logotipo pequeno" xmlns="http://www.w3.org/2000/svg">
-          <title>ReceitaJá</title>
-          <rect x="3" y="3" width="18" height="18" rx="4" fill="#1d4ed8"/>
-          <path d="M12 7v10M7 12h10" stroke="white" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-        <span class="font-semibold">ReceitaJá</span>
-      </div>
-      <nav aria-label="Rodapé">
-        <ul class="flex flex-wrap gap-6">
-          <li><a class="hover:underline" href="/privacy" aria-label="Política de Privacidade">Privacy</a></li>
-          <li><a class="hover:underline" href="/terms" aria-label="Termos de Uso">Terms</a></li>
-          <li><a class="hover:underline" href="/contato" aria-label="Contato">Contact</a></li>
-        </ul>
-      </nav>
-      <p class="text-sm text-slate-600">© <span id="year">2025</span> ReceitaJá.</p>
+  <footer class="bg-gray-900 text-gray-300 py-12" role="contentinfo">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="grid md:grid-cols-4 gap-8">
+            <div>
+                <div class="flex items-center space-x-2 mb-4">
+                    <svg class="w-8 h-8 text-blue-400" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M10 2C5.58 2 2 5.58 2 10s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3.5 6L10 10.5 6.5 8 10 5.5 13.5 8z" clip-rule="evenodd"/>
+                    </svg>
+                    <span class="text-xl font-bold text-white">ReceitaOnline</span>
+                </div>
+                <p class="text-sm">
+                    Renovação de receitas médicas de forma segura, rápida e regulamentada.
+                </p>
+            </div>
+            <div>
+                <h3 class="font-semibold text-white mb-4">Legal</h3>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="/termos" class="hover:text-white transition-colors focus-visible">Termos de Uso</a></li>
+                    <li><a href="/privacidade" class="hover:text-white transition-colors focus-visible">Política de Privacidade</a></li>
+                    <li><a href="/contato" class="hover:text-white transition-colors focus-visible">Contato</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="font-semibold text-white mb-4">Suporte</h3>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="/faq" class="hover:text-white transition-colors focus-visible">FAQ</a></li>
+                    <li><a href="/ajuda" class="hover:text-white transition-colors focus-visible">Central de Ajuda</a></li>
+                    <li><a href="mailto:suporte@receitaonline.com.br" class="hover:text-white transition-colors focus-visible">suporte@receitaonline.com.br</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="font-semibold text-white mb-4">Médico?</h3>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="/medicos" class="hover:text-white transition-colors focus-visible">Trabalhe Conosco</a></li>
+                    <li><a href="/parceiros" class="hover:text-white transition-colors focus-visible">Parceiros</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="border-t border-gray-800 mt-8 pt-8 text-sm text-center">
+            <p class="mb-4">
+                <strong>Aviso Médico:</strong> Este serviço é destinado exclusivamente para renovação de receitas médicas já estabelecidas. Não substitui consulta médica completa. Em caso de dúvidas sobre sua condição de saúde, consulte um médico presencialmente.
+            </p>
+            <p>&copy; <script>document.write(new Date().getFullYear())</script> ReceitaOnline. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
+        </div>
     </div>
-  </footer>
+</footer>
 
   <!-- JS não crítico (adiado) -->
   <script defer>
@@ -410,11 +378,7 @@
     })();
   </script>
 
-  <!-- Notas:
-    - Página de sucesso focada em clareza e próximos passos.
-    - Copys curtas, voz acolhedora e responsável; sem promessas absolutas.
-    - SVGs leves e com alt/title garantem A11y e desempenho.
-    - Links obrigatórios: Privacy, Terms, Contact.
-  -->
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
