small fixes in copy

--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-2">
-                    <svg class="w-8 h-8 text-blue-600" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10 2C5.58 2 2 5.58 2 10s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3.5 6L10 10.5 6.5 8 10 5.5 13.5 8z" clip-rule="evenodd"/>
-                    </svg>
+                  <svg class="h-8 w-8" viewBox="0 0 24 24" role="img" aria-label="Logotipo: cruz médica" xmlns="http://www.w3.org/2000/svg">
+                    <title>DrMente</title>
+                    <rect x="3" y="3" width="18" height="18" rx="4" fill="#1d4ed8"></rect>
+                    <path d="M12 7v10M7 12h10" stroke="white" stroke-width="2" stroke-linecap="round" />
+                  </svg>
                     <!-- <img src="drmente-logo.svg" alt="DrMente" class="w-8 h-8"> -->
                     <span class="text-xl font-bold text-gray-900">DrMente</span>
                 </div>
@@ -501,8 +503,10 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
                     <div class="flex items-center space-x-2 mb-4">
-                        <svg class="w-8 h-8 text-blue-400" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M10 2C5.58 2 2 5.58 2 10s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3.5 6L10 10.5 6.5 8 10 5.5 13.5 8z" clip-rule="evenodd"/>
+                        <svg class="h-8 w-8" viewBox="0 0 24 24" role="img" aria-label="Logotipo: cruz médica" xmlns="http://www.w3.org/2000/svg">
+                          <title>DrMente</title>
+                          <rect x="3" y="3" width="18" height="18" rx="4" fill="#1d4ed8"></rect>
+                          <path d="M12 7v10M7 12h10" stroke="white" stroke-width="2" stroke-linecap="round" />
                         </svg>
                         <span class="text-xl font-bold text-white">DrMente</span>
                     </div>
@@ -538,7 +542,7 @@
                 <p class="mb-4">
                     <strong>Aviso Médico:</strong> Este serviço é destinado exclusivamente para renovação de receitas médicas já estabelecidas. Não substitui consulta médica completa. Em caso de dúvidas sobre sua condição de saúde, consulte um médico presencialmente.
                 </p>
-                <p>&copy; <script>document.write(new Date().getFullYear())</script> DrMente. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
+                <p>&copy; <script>document.write(new Date().getFullYear())</script> DrMente. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
