--- a/successo.html
+++ b/successo.html
@@ -29,7 +29,10 @@
   <style>
     :root { color-scheme: light; }
     html { scroll-behavior: smooth; }
-    .hero { min-height: 75vh; }
+    .hero {
+      /* min-height: 75vh; */
+      background: linear-gradient(to bottom right, hsl(35 60% 95%), hsl(0 0% 100%), #b1eccd);
+    }
     a:focus-visible, button:focus-visible { outline: 3px solid #1d4ed8; outline-offset: 2px; }
   </style>
 
@@ -116,7 +119,7 @@
 
   <!-- Hero / Confirmação -->
   <main id="main" role="main">
-    <section class="hero bg-gradient-to-b from-white to-slate-50">
+    <section class="hero">
       <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8 py-12 sm:py-16 grid lg:grid-cols-2 gap-8 items-center">
         <div>
           <h1 class="text-4xl sm:text-5xl font-extrabold tracking-tight">
@@ -134,7 +137,7 @@
         </div>
 
         <!-- Ilustração leve em SVG, ajuda no entendimento e evita imagens pesadas -->
-        <div class="relative">
+        <div class="relative hidden lg:block">
           <svg class="w-full h-auto" viewBox="0 0 600 420" role="img" aria-label="Ilustração: confirmação de pedido em celular" xmlns="http://www.w3.org/2000/svg">
             <title>Confirmação de pedido</title>
             <rect x="40" y="40" width="520" height="340" rx="24" fill="#e2e8f0"/>
@@ -156,12 +159,12 @@
         <div class="mt-6 grid md:grid-cols-3 gap-6">
           <div class="p-6 rounded-2xl border border-slate-200 bg-slate-50">
             <h3 class="font-semibold">Pedido registrado</h3>
-            <p id="proto" class="mt-1 text-slate-700 select-all">—</p>
+            <p id="proto" class="mt-1 text-slate-700 select-all">&nbsp;</p>
             <p class="mt-2 text-sm text-slate-600">Seu pedido de renovação de receita foi registrado com sucesso.</p>
           </div>
           <div class="p-6 rounded-2xl border border-slate-200 bg-slate-50">
             <h3 class="font-semibold">Dados validados</h3>
-            <p id="email" class="mt-1 text-slate-700 break-words">—</p>
+            <p id="email" class="mt-1 text-slate-700 break-words">&nbsp;</p>
             <p class="mt-2 text-sm text-slate-600">Verificamos suas informações pessoais e já foram validadas.</p>
           </div>
           <div class="p-6 rounded-2xl border border-slate-200 bg-slate-50">
@@ -285,10 +288,12 @@
         <div class="grid md:grid-cols-4 gap-8">
             <div>
                 <div class="flex items-center space-x-2 mb-4">
-                    <svg class="w-8 h-8 text-blue-400" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10 2C5.58 2 2 5.58 2 10s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3.5 6L10 10.5 6.5 8 10 5.5 13.5 8z" clip-rule="evenodd"/>
+                    <svg class="h-8 w-8" viewBox="0 0 24 24" role="img" aria-label="Logotipo: cruz médica" xmlns="http://www.w3.org/2000/svg">
+                      <title>DrMente</title>
+                      <rect x="3" y="3" width="18" height="18" rx="4" fill="#1d4ed8"></rect>
+                      <path d="M12 7v10M7 12h10" stroke="white" stroke-width="2" stroke-linecap="round" />
                     </svg>
-                    <span class="text-xl font-bold text-white">ReceitaOnline</span>
+                    <span class="text-xl font-bold text-white">DrMente</span>
                 </div>
                 <p class="text-sm">
                     Renovação de receitas médicas de forma segura, rápida e regulamentada.
@@ -297,24 +302,24 @@
             <div>
                 <h3 class="font-semibold text-white mb-4">Legal</h3>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="/termos" class="hover:text-white transition-colors focus-visible">Termos de Uso</a></li>
-                    <li><a href="/privacidade" class="hover:text-white transition-colors focus-visible">Política de Privacidade</a></li>
-                    <li><a href="/contato" class="hover:text-white transition-colors focus-visible">Contato</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">Termos de Uso</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">Política de Privacidade</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">Contato</a></li>
                 </ul>
             </div>
             <div>
                 <h3 class="font-semibold text-white mb-4">Suporte</h3>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="/faq" class="hover:text-white transition-colors focus-visible">FAQ</a></li>
-                    <li><a href="/ajuda" class="hover:text-white transition-colors focus-visible">Central de Ajuda</a></li>
-                    <li><a href="mailto:suporte@receitaonline.com.br" class="hover:text-white transition-colors focus-visible">suporte@receitaonline.com.br</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">FAQ</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">Central de Ajuda</a></li>
+                    <li><a href="mailto:suporte@drmente.com" class="hover:text-white transition-colors focus-visible">suporte@drmente.com</a></li>
                 </ul>
             </div>
             <div>
                 <h3 class="font-semibold text-white mb-4">Médico?</h3>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="/medicos" class="hover:text-white transition-colors focus-visible">Trabalhe Conosco</a></li>
-                    <li><a href="/parceiros" class="hover:text-white transition-colors focus-visible">Parceiros</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">Trabalhe Conosco</a></li>
+                    <li><a href="#" class="hover:text-white transition-colors focus-visible">Parceiros</a></li>
                 </ul>
             </div>
         </div>
@@ -322,10 +327,10 @@
             <p class="mb-4">
                 <strong>Aviso Médico:</strong> Este serviço é destinado exclusivamente para renovação de receitas médicas já estabelecidas. Não substitui consulta médica completa. Em caso de dúvidas sobre sua condição de saúde, consulte um médico presencialmente.
             </p>
-            <p>&copy; <script>document.write(new Date().getFullYear())</script> ReceitaOnline. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
+            <p>&copy; <script>document.write(new Date().getFullYear())</script> DrMente. Todos os direitos reservados.</p>
         </div>
     </div>
-</footer>
+  </footer>
 
   <!-- JS não crítico (adiado) -->
   <script defer>
