remove tailwind defer

--- a/p/sucesso/index.html
+++ b/p/sucesso/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:image" content="https://drmente.com/og-sucesso.jpg" />
 
   <!-- TailwindCSS via CDN (sem build) -->
-  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Critical CSS (mínimo, acima da dobra) -->
   <style>
