--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Renovar Receita Médica Online - Rápido e Seguro</title>
+    <title>DrMente</title>
     <meta name="description" content="Renove sua receita médica de ansiedade sem sair de casa. Processo 100% online, seguro e regulamentado. Economize tempo e dinheiro.">
     <meta name="keywords" content="renovar receita médica online, receita médica ansiedade, telemedicina, consulta online">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/logo.svg">
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/logo.svg">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
