--- a/p/sucesso/index.html
+++ b/p/sucesso/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sucesso! Estamos processando seu pedido</title>
+  <title>DrMente</title>
   <meta name="description" content="Sucesso! Recebemos seu pedido. Estamos processando e entraremos em contato em breve." />
   <meta name="keywords" content="renovar receita médica online, confirmação de pedido, telemedicina" />
-  <link rel="canonical" href="https://drmente.com/sucesso" />
+  <link rel="canonical" href="https://drmente.com/p/sucesso" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/svg+xml" sizes="32x32" href="/logo.svg">
+  <link rel="icon" type="image/svg+xml" sizes="16x16" href="/logo.svg">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Sucesso! Estamos processando seu pedido" />
   <meta property="og:description" content="Recebemos seu pedido. Acompanhe o protocolo e saiba os próximos passos." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://drmente.com/sucesso" />
+  <meta property="og:url" content="https://drmente.com/p/sucesso" />
   <meta property="og:image" content="https://drmente.com/og-sucesso.jpg" />
   <meta property="og:locale" content="pt_BR" />
 
