--- a/p/sucesso/index.html
+++ b/p/sucesso/index.html
@@ -12,7 +12,12 @@
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1358024049025263');
     fbq('track', 'PageView');
-    fbq('track', 'Lead');
+  </script>
+
+  <script>
+    window.addEventListener('load', function () {
+      fbq('track', 'Lead'); // params ajudam nas configurações
+    });
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
