add meta tag to verify domain

--- a/p/sucesso/index.html
+++ b/p/sucesso/index.html
@@ -19,6 +19,8 @@
       fbq('track', 'Lead'); // params ajudam nas configurações
     });
   </script>
+  <meta name="facebook-domain-verification" content="lb3mkgfapxrjap6h1faiytcyrlghdm" />
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DrMente</title>
