--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     fbq('init', '1358024049025263');
     fbq('track', 'PageView');
   </script>
+    <meta name="facebook-domain-verification" content="lb3mkgfapxrjap6h1faiytcyrlghdm" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DrMente</title>
