--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
   </noscript>
     <!-- ANALYTICS: add script here -->
 
+    <div id="consent-banner" style="
+  position:fixed;bottom:0;left:0;right:0;
+  background:#fff;padding:15px;
+  box-shadow:0 -2px 5px rgba(0,0,0,0.2);
+  font-family:sans-serif;z-index:9999;
+  display:flex;justify-content:space-between;align-items:center;">
+  <span>Usamos cookies e o Pixel Meta para medir conversões. Você aceita?</span>
+  <button id="accept-consent" style="margin-left:10px;padding:5px 10px;">Aceito</button>
+</div>
+
     <!-- Navigation -->
     <nav class="fixed top-0 w-full bg-white/95 backdrop-blur-sm border-b border-gray-200 z-50" role="navigation" aria-label="Navegação principal">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
