--- a/p/sucesso/index.html
+++ b/p/sucesso/index.html
@@ -11,14 +11,14 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1358024049025263');
-    // fbq('track', 'PageView');
+    fbq('track', 'PageView');
   </script>
 
-  <!-- <script>
+  <script>
     window.addEventListener('load', function () {
-      fbq('track', 'Lead'); // params ajudam nas configurações
+      fbq('track', 'Lead');
     });
-  </script> -->
+  </script>
   <meta name="facebook-domain-verification" content="lb3mkgfapxrjap6h1faiytcyrlghdm" />
 
   <meta charset="utf-8" />
