add custom event - lp1-completed-form lp1-clicked-form

--- a/p/sucesso/index.html
+++ b/p/sucesso/index.html
@@ -14,7 +14,7 @@
     fbq('track', 'PageView');
 
     fbq('track', 'Lead');
-    fbq('trackCustom', 'CompletedForm');
+    fbq('trackCustom', 'lp1-completed-form');
   </script>
   <meta name="facebook-domain-verification" content="lb3mkgfapxrjap6h1faiytcyrlghdm" />
 
