--- a/index.html
+++ b/index.html
@@ -578,6 +578,8 @@
                 if (button.textContent.includes('Começar') || button.textContent.includes('Renovar') || button.textContent.includes('Escolher')) {
                     button.addEventListener('click', function() {
                         // window.open('https://forms.gle/dSvcWisMaMYQ16am8', '_blank');
+
+                        fbq('trackCustom', 'lp1-clicked-form');
                         window.open('https://formshare.ai/r/9xrRzauoSk', '_blank');
                     });
                 }
