novo formulario cnta nova

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                         // window.open('https://forms.gle/dSvcWisMaMYQ16am8', '_blank');
 
                         fbq('trackCustom', 'lp1-clicked-form');
-                        window.open('https://formshare.ai/r/9xrRzauoSk', '_blank');
+                        window.open('https://formshare.ai/s/Vkz3Dx3jE8', '_blank');
                     });
                 }
             });
